--- a/notebooks/1.1_machinelearning_deeplearninglandscape.ipynb
+++ b/notebooks/1.1_machinelearning_deeplearninglandscape.ipynb
@@ -93,14 +93,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Bienvenido a Machine Learning Housing Corp. Su tarea es predecir el valor medio de la vivienda en los distritos de California, dada una serie de características de estos distritos."
+    "Bienvenido a Machine Learning Housing Corp. Su tarea es predecir el valor medio de la vivienda en los distritos de California, dada una serie de características de estos distritos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Descargar los datos"
+    "### Descargar los datos"
    ]
   },
   {
@@ -1519,7 +1519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "nav_menu": {
    "height": "279px",
