added random forest 2

--- a/notebooks/2.2_machinelearning_decisiontreeandrandomforests.ipynb
+++ b/notebooks/2.2_machinelearning_decisiontreeandrandomforests.ipynb
@@ -584,7 +584,7 @@
    "outputs": [],
    "source": [
     "# Visualisamos el árbol de decición\n",
-    "#graph"
+    "graph"
    ]
   },
   {
@@ -594,19 +594,7 @@
    "outputs": [],
    "source": [
     "# Guardarla en un archivo de imagen\n",
-    "#graph.render(\"arboldedecision\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#dot_data = StringIO()\n",
-    "#export_graphviz(classifier, out_file=dot_data, feature_names=iris.feature_names, filled=True)\n",
-    "#graph = pydotplus.graph_from_dot_data(dot_data.getvalue())\n",
-    "#Image(graph.create_png())"
+    "graph.render(\"arboldedecision\")"
    ]
   },
   {
