--- a/notebooks/3.2_deepleaningintroduction_pricesusedvehicles_SOL.ipynb
+++ b/notebooks/3.2_deepleaningintroduction_pricesusedvehicles_SOL.ipynb
@@ -8,10 +8,10 @@
    "source": [
     "<table align=\"left\">\n",
     "  <td>\n",
-    "    <a href=\"https://colab.research.google.com/github/marcoteran/deeplearning/blob/master/notebooks/3.1_deepleaningintroduction_dnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Abrir en Colab\" title=\"Abrir y ejecutar en Google Colaboratory\"/></a>\n",
+    "    <a href=\"https://colab.research.google.com/github/marcoteran/deeplearning/blob/master/notebooks/3.2_deepleaningintroduction_dnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Abrir en Colab\" title=\"Abrir y ejecutar en Google Colaboratory\"/></a>\n",
     "  </td>\n",
     "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://kaggle.com/kernels/welcome?src=https://github.com/marcoteran/deeplearning/blob/master/notebooks/3.1_deepleaningintroduction_dnn.ipynb\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" alt=\"Abrir en Kaggle\" title=\"Abrir y ejecutar en Kaggle\"/></a>\n",
+    "    <a target=\"_blank\" href=\"https://kaggle.com/kernels/welcome?src=https://github.com/marcoteran/deeplearning/blob/master/notebooks/3.2_deepleaningintroduction_dnn.ipynb\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" alt=\"Abrir en Kaggle\" title=\"Abrir y ejecutar en Kaggle\"/></a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -107,7 +107,18 @@
     "id": "cSWTI9p6ZH9O"
    },
    "source": [
-    "## 1 Evalua la cantidad, tipo y completitud de las variables disponibles"
+    "# 1. Evalua la cantidad, tipo y completitud de las variables disponibles\n",
+    "\n",
+    "En esta sección, se realiza una exploración básica del conjunto de datos \"cars\" utilizando algunas funciones de pandas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primero, se utiliza la función shape de pandas para imprimir la cantidad de filas y columnas en \"cars\". Esto proporciona una idea inicial de la magnitud del conjunto de datos.\n",
+    "\n",
+    "Luego, se utiliza la función isnull para detectar la cantidad de valores nulos en cada columna de \"cars\". Se calcula el porcentaje de valores nulos para cada columna y se imprime en pantalla."
    ]
   },
   {
@@ -128,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación, se utiliza la función DataFrame de pandas para crear un nuevo dataframe llamado \"types\", que almacena los tipos de datos de cada columna en \"cars\". Esto ayuda a comprender mejor la estructura de los datos y cómo se deben manejar"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -142,6 +160,13 @@
    "source": [
     "types = pd.DataFrame(cars.dtypes)\n",
     "print(types.groupby(0).size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, se crea una lista llamada \"categoricas\" que almacena los nombres de las columnas que contienen datos categóricos (es decir, no numéricos). Se utiliza un bucle para recorrer cada columna categórica y se imprime en pantalla la cantidad de valores únicos en esa columna. Esto proporciona información adicional sobre la naturaleza de los datos y cómo se deben procesar para el análisis posterior."
    ]
   },
   {
@@ -163,23 +188,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "uYilrpGZHgWe"
-   },
-   "outputs": [],
-   "source": [
-    "###Coloca tu código aquí"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "B9_dNCTum1Hw"
    },
    "source": [
-    "<h1 id=\"ingenieria\">Ingeniería de datos</h1>\n",
+    "# Ingeniería de datos\n",
     "\n",
     "Ahora se debe preparar la información para poder alimentar la red neuronal."
    ]
@@ -190,7 +204,18 @@
     "id": "vRCjvmPz63n7"
    },
    "source": [
-    "# 2. Implementa estrategías para tratar la información nula en las variables cuya tasa de nulos sea máximo el 10%"
+    "# 2. Implementa estrategías para tratar la información nula en las variables cuya tasa de nulos sea máximo el 10%\n",
+    "\n",
+    "En esta sección, se realizan algunas tareas de limpieza y preparación de datos para el conjunto de datos \"cars\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. En primer lugar, se rellenan los valores faltantes en la columna \"fuel\" con el valor más común utilizando la función fillna de pandas. Este es un ejemplo de cómo manejar valores nulos o faltantes en el conjunto de datos.\n",
+    "2. Luego, se vuelven a imprimir las dimensiones de \"cars\" y se verifica si hay valores nulos en otras columnas.\n",
+    "3. Después, se rellenan los valores faltantes en las columnas \"title_status\", \"transmission\" y \"manufacturer\" con el valor más común utilizando la función fillna de pandas."
    ]
   },
   {
@@ -251,6 +276,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuación, se crea una copia del dataframe llamado \"df\" y se aplican técnicas de codificación de variables categóricas. Se crea una nueva columna para cada valor posible en cada variable categórica y se codifica como 1 si la observación tiene ese valor y 0 si no lo tiene. Esto se realiza utilizando la función get_dummies de pandas.\n",
+    "* Además, se eliminan las columnas que contienen la categoría \"other\" ya que no aportan ningún valor al conjunto de datos.\n",
+    "* Luego, se vuelven a imprimir las dimensiones de \"df\" y se imprime una vista previa del conjunto de datos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -267,11 +301,18 @@
     "for col in categoricas:\n",
     "    df = pd.concat([df, (pd.get_dummies(df[col])).astype(int)], axis=1)\n",
     "    df.drop(columns=[col],inplace=True)\n",
-    "#Al crear las variables dummies se crean varias columnas referentes a categorias\n",
+    "# Al crear las variables dummies se crean varias columnas referentes a categorias\n",
     "# 'other' que no aportan ningún valor al dataset por lo cual las eliminamos\n",
     "df.drop('other', axis=1, inplace=True)\n",
     "print(df.shape)\n",
     "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación, se utiliza la función DataFrame de pandas para crear un nuevo dataframe llamado \"types\", que almacena los tipos de datos de cada columna en \"df\"."
    ]
   },
   {
@@ -289,6 +330,15 @@
    "source": [
     "types = pd.DataFrame(df.dtypes)\n",
     "print(\"Tipos de variables\",types.groupby(0).size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Después, se seleccionan las columnas numéricas del conjunto de datos y se eliminan las que corresponden a la variable objetivo (\"price\"). Esto se realiza utilizando la función set de Python para encontrar las columnas numéricas y luego la función list para convertir el resultado en una lista.\n",
+    "\n",
+    "Por último, se crea un nuevo dataframe llamado \"variables_consolidadas\" que contiene solo las variables numéricas y se crea un nuevo dataframe llamado \"objetivo\" que contiene solo la variable objetivo (\"price\")."
    ]
   },
   {
@@ -317,7 +367,22 @@
     "id": "mOP0z86EKrly"
    },
    "source": [
-    "# 3. Separa el set de datos consolidados en 3 sets (entrenamiento, prueba y validación) de acuerdo con las recomendaciones vistas en el curso."
+    "# 3. Separa el set de datos consolidados en 3 sets (entrenamiento, prueba y validación) de acuerdo con las recomendaciones vistas en el curso.\n",
+    "\n",
+    "\n",
+    "En estas líneas de código se utiliza la librería Scikit-learn para dividir los datos en conjuntos de entrenamiento, validación y prueba. Se utiliza la función \"train_test_split\" para crear los tres conjuntos a partir de las variables consolidadas (x) y la variable objetivo (y).\n",
+    "* Primero, se divide en 80% de entrenamiento y 20% de prueba.\n",
+    "* Luego, se divide el conjunto de entrenamiento en 90% para entrenamiento y 10% para validación."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coloca tu código aquí\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -328,9 +393,6 @@
    },
    "outputs": [],
    "source": [
-    "#Coloca tu código aquí\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "#80% train 20% test\n",
     "x_train,x_test, y_train,y_test = train_test_split(variables_consolidadas,objetivo,test_size=0.2, random_state=2020)"
    ]
@@ -348,6 +410,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Posteriormente, se utiliza la función \"reshape\" para cambiar la forma de las variables objetivo y poder utilizarlas en modelos de aprendizaje automático. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -358,6 +427,13 @@
     "y_train=y_train.values.reshape(-1,1)\n",
     "y_test=y_test.values.reshape(-1,1)\n",
     "y_val=y_val.values.reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, se imprimen las formas (shapes) de los conjuntos de entrenamiento, validación y prueba para verificar que se hayan creado correctamente."
    ]
   },
   {
@@ -380,15 +456,6 @@
     "print(\"Shape of y_test:\",y_test.shape)\n",
     "print(\"Shape of y_val:\",y_val.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "ec-WpvcnItVq"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -414,6 +481,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se importa la clase StandardScaler de la biblioteca sklearn.preprocessing, la cual es una técnica de preprocesamiento de datos que escala los datos para que tengan una media de cero y una desviación estándar de uno. Esto es importante porque ayuda a que el modelo pueda trabajar con variables en la misma escala, lo que puede mejorar su rendimiento."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -422,18 +496,96 @@
    "outputs": [],
    "source": [
     "#Coloca tu código aquí\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se crea una instancia de StandardScaler() y se llama al método fit() con los datos de entrenamiento x_train, para que el objeto pueda aprender los parámetros de escalamiento a partir de estos datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scaler = StandardScaler()\n",
-    "scaler.fit(x_train)\n",
+    "scaler.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se utiliza el método transform() para escalar los conjuntos de datos de entrenamiento, validación y prueba x_train, x_val y x_test, respectivamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_train_scaled = scaler.transform(x_train)\n",
     "x_val_scaled = scaler.transform(x_val)\n",
-    "x_test_scaled = scaler.transform(x_test)\n",
-    "\n",
+    "x_test_scaled = scaler.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se repiten los pasos anteriores para la variable objetivo y_train, y_val y y_test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scaler1 = StandardScaler()\n",
-    "scaler1.fit(y_train)\n",
+    "scaler1.fit(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y_train_scaled = scaler1.transform(y_train)\n",
     "y_val_scaled = scaler1.transform(y_val)\n",
     "y_test_scaled = scaler1.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se importa la clase Sequential y los módulos Dense, Dropout de la biblioteca Keras. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Coloca tu código aquí\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout\n",
+    "from keras.utils import plot_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego, se crea una instancia de la clase Sequential y se añaden varias capas Dense con activación relu, una capa Dropout y una capa final con activación linear."
    ]
   },
   {
@@ -449,20 +601,84 @@
    },
    "outputs": [],
    "source": [
-    "#Coloca tu código aquí\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
-    "from keras.utils import plot_model\n",
-    "\n",
     "model = Sequential()\n",
     "model.add(Dense(256,input_dim = x_train.shape[1],activation=\"relu\"))\n",
     "model.add(Dense(128,activation=\"relu\"))\n",
     "model.add(Dense(128,activation=\"relu\"))\n",
     "model.add(Dropout(0.2))\n",
-    "model.add(Dense(1,activation = \"linear\")) \n",
-    "model.compile(optimizer = \"adam\",loss=\"mse\",metrics=[\"mean_absolute_error\"])\n",
-    "\n",
+    "model.add(Dense(1,activation = \"linear\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se compila el modelo con el optimizador adam, la función de pérdida mse (mean squared error) y la métrica mean_absolute_error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer = \"adam\",loss=\"mse\",metrics=[\"mean_absolute_error\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se imprime un resumen del modelo con la función summary()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pydot\n",
+    "#!pip install graphviz\n",
+    "#!conda install -c anaconda pydot=1.2.3\n",
+    "#!conda install -c anaconda pyparsing=2.2.0\n",
+    "#!conda install GraphViz\n",
+    "\n",
+    "import errno\n",
+    "import pydot\n",
+    "from tensorflow.keras.utils import plot_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Muestra el diagrama del modelo en un archivo PNG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(model, to_file='model.png',show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se entrena el modelo llamando al método fit() con los datos escalados y se guardan los resultados del entrenamiento en el objeto modelhistory. El modelo se entrena durante 50 épocas con un tamaño de lote de 1024. También se proporcionan los datos de validación para que se evalúe el rendimiento del modelo en cada época."
    ]
   },
   {
@@ -505,8 +721,7 @@
    "source": [
     "result = model.evaluate(x_test_scaled,y_test_scaled)\n",
     "for i in range(len(model.metrics_names)):\n",
-    " print(\"Metric \",model.metrics_names[i],\":\",\n",
-    "str(round(result[i],2)))"
+    "    print(\"Metric \",model.metrics_names[i],\":\", str(round(result[i],2)))"
    ]
   },
   {
@@ -515,7 +730,7 @@
     "id": "owT0Fwf0_N3i"
    },
    "source": [
-    "Si tu modelo cumple con el requerimiento guardalo con el siguiente comando:"
+    "Si el modelo cumple con el requerimiento, se guarda con el siguiente comando:"
    ]
   },
   {
@@ -637,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
