--- a/notebooks/3.3_deeplearning_cnnanddataaugmentationandtransferlearning_ORG.ipynb
+++ b/notebooks/3.3_deeplearning_cnnanddataaugmentationandtransferlearning_ORG.ipynb
@@ -1204,11 +1204,7 @@
       "Epoch 2/5\n",
       "1875/1875 [==============================] - 935s 499ms/step - loss: 0.3257 - accuracy: 0.8853\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 828s 442ms/step - loss: 0.2787 - accuracy: 0.9021\n",
-      "Epoch 4/5\n",
-      "1875/1875 [==============================] - 759s 405ms/step - loss: 0.2497 - accuracy: 0.9117\n",
-      "Epoch 5/5\n",
-      "1488/1875 [======================>.......] - ETA: 2:42 - loss: 0.2217 - accuracy: 0.9205"
+      " 757/1875 [===========>..................] - ETA: 8:55 - loss: 0.2817 - accuracy: 0.9005"
      ]
     }
    ],
