--- a/notebooks/3.3_deeplearning_cnnanddataaugmentationandtransferlearning.ipynb
+++ b/notebooks/3.3_deeplearning_cnnanddataaugmentationandtransferlearning.ipynb
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,10 @@
       "Epoch 4/5\n",
       "1875/1875 [==============================] - 759s 405ms/step - loss: 0.2497 - accuracy: 0.9117\n",
       "Epoch 5/5\n",
-      "1488/1875 [======================>.......] - ETA: 2:42 - loss: 0.2217 - accuracy: 0.9205"
+      "1875/1875 [==============================] - 800s 427ms/step - loss: 0.2216 - accuracy: 0.9209\n",
+      "313/313 [==============================] - 24s 75ms/step - loss: 0.2185 - accuracy: 0.9219\n",
+      "\n",
+      "Test accuracy: 0.9218999743461609\n"
      ]
     }
    ],
@@ -1235,7 +1238,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1875/1875 [==============================] - 766s 407ms/step - loss: 0.4977 - accuracy: 0.8285\n",
+      "Epoch 2/10\n",
+      "1875/1875 [==============================] - 753s 402ms/step - loss: 0.3170 - accuracy: 0.8881\n",
+      "Epoch 3/10\n",
+      "1875/1875 [==============================] - 757s 404ms/step - loss: 0.2686 - accuracy: 0.9042\n",
+      "Epoch 4/10\n",
+      "1875/1875 [==============================] - 757s 404ms/step - loss: 0.2422 - accuracy: 0.9152\n",
+      "Epoch 5/10\n",
+      "1875/1875 [==============================] - 752s 401ms/step - loss: 0.2199 - accuracy: 0.9216\n",
+      "Epoch 6/10\n",
+      "1875/1875 [==============================] - 755s 403ms/step - loss: 0.2056 - accuracy: 0.9273\n",
+      "Epoch 7/10\n",
+      "1875/1875 [==============================] - 750s 400ms/step - loss: 0.1864 - accuracy: 0.9334\n",
+      "Epoch 8/10\n",
+      "1537/1875 [=======================>......] - ETA: 2:27 - loss: 0.1730 - accuracy: 0.9389"
+     ]
+    }
+   ],
    "source": [
     "model = make_model()\n",
     "\n",
