--- a/notebooks/3.4_deeplearning_dataaugmentationandtransferlearning.ipynb
+++ b/notebooks/3.4_deeplearning_dataaugmentationandtransferlearning.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "%%capture\n",
     "#!wget -O cats_and_dogs_small.zip https://github.com/marcoteran/deeplearning/raw/master/notebooks/cats_and_dogs_small.zip\n",
-    "#!unzip data.zip"
+    "#!unzip cats_and_dogs_small.zip"
    ]
   },
   {
